--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fixdevice",
+    "name": "Maltsev",
     "version": "1.0.0",
     "description": "Aleksandr Maltsev - Start HTML Template",
     "main": "index.js",
