--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.8.3",
+        "@babel/polyfill": "^7.8.3",
         "@babel/preset-env": "^7.8.3",
         "babel-loader": "^8.0.6",
         "babel-polyfill": "^6.26.0",
