--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "author": "Aleksandr Maltsev",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.8.3",
-        "@babel/polyfill": "^7.8.3",
-        "@babel/preset-env": "^7.8.3",
+        "@babel/core": "^7.8.4",
+        "@babel/plugin-transform-runtime": "^7.8.3",
+        "@babel/preset-env": "^7.8.4",
         "babel-loader": "^8.0.6",
-        "babel-polyfill": "^6.26.0",
         "browser-sync": "^2.26.7",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^6.1.0",
